# MyFirstSlicerExtension

./: CMakeLists.txt
lineIntensityProfile/: CMakeLists.txt  lineIntensityProfile.py  lineIntensityProfile.py~
